fix navbar alignment on contact page

--- a/css/main.css
+++ b/css/main.css
@@ -307,3 +307,11 @@ CONTACT PAGE
     border: none;
   }
 }
+
+.menu-container .navbar-item {
+  color: white;
+}
+
+.menu-container .navbar-link {
+  color: white;
+}
